[gd_scene load_steps=6 format=2]

[ext_resource path="res://singletone/command_system.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/effects/BackgroundBlur.tscn" type="PackedScene" id=2]
[ext_resource path="res://singletone/command_system_dependecy/command_api.gd" type="Script" id=3]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EffectLayer/Control/BackgroundBlur:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=1]
resource_name = "unblur"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("EffectLayer/Control/BackgroundBlur:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("EffectLayer/Control/BackgroundBlur")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "unBlurBackground"
} ]
}

[node name="CommandSystem" type="Node" groups=["command_system"]]
script = ExtResource( 1 )

[node name="CommandAPI" type="Node" parent="."]
script = ExtResource( 3 )

[node name="EffectLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="Control" type="Control" parent="EffectLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackgroundBlur" parent="EffectLayer/Control" instance=ExtResource( 2 )]
Animate = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="CommandSystemInterface" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CommandSystemInterface"]
anchor_left = 0.00976562
anchor_top = 0.0166667
anchor_right = 0.990234
anchor_bottom = 0.0566667
margin_top = -9.53674e-07
margin_bottom = -34.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CommandInput" type="LineEdit" parent="CanvasLayer/CommandSystemInterface/HBoxContainer"]
margin_right = 1828.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "type the command..."

[node name="RunButton" type="Button" parent="CanvasLayer/CommandSystemInterface/HBoxContainer"]
margin_left = 1832.0
margin_right = 1882.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 0 )
text = "run"

[node name="Console" type="ScrollContainer" parent="CanvasLayer/CommandSystemInterface"]
anchor_left = 0.00976562
anchor_top = 0.075
anchor_right = 0.990234
anchor_bottom = 0.983333
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Log" type="VBoxContainer" parent="CanvasLayer/CommandSystemInterface/Console"]
margin_right = 1882.5
margin_bottom = 981.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/unblur = SubResource( 1 )

[connection signal="text_changed" from="CanvasLayer/CommandSystemInterface/HBoxContainer/CommandInput" to="." method="_on_CommandInput_text_changed"]
[connection signal="text_entered" from="CanvasLayer/CommandSystemInterface/HBoxContainer/CommandInput" to="." method="_on_CommandInput_text_entered"]
[connection signal="pressed" from="CanvasLayer/CommandSystemInterface/HBoxContainer/RunButton" to="." method="_on_RunButton_pressed"]
